form functionality added

--- a/book_table.html
+++ b/book_table.html
@@ -40,7 +40,7 @@
    <div class="main">
 <div class="register">
  <h2>Book a table</h2>
- <form id="register" onsubmit=" return check()">
+ <form id="register" name="booking-form" method="post" netlify onsubmit=" return check()">
      <lable>Your name : </lable><br>
       <input type="text" name="username" id="name" class="name"
       placeholder="Enter Your full name">
