--- a/contactus.html
+++ b/contactus.html
@@ -110,7 +110,7 @@
         Have a question or comment?<br>
         You are in the right place</p>
     </div>
-    <form id="register" method="post"class="name " action="contactus.php" onsubmit=" return check()">
+    <form id="register" class="name " name="contact-form" method="post" netlify onsubmit="return check()" >
         <div class="left">
             <lable>Your name : </lable><br>
             <input type="text" name="name" class="name "id="name" placeholder="Enter Your full name">
